src/scss/themes/fylr/components/_forms.scss
// cui-form
// cui-form-table
// cui-form-container
// cui-form-block
// cui-data-form
// hint, valid/invalid


.cui-form {
	overflow: visible;
	background-color: $light; // todo: should we set a default background because of the white form elements ?
	// needs to apply padding on a contextual basis
	// padding: $spacer-sm;

	// todo: make obsolete
	// &--padded {
	// 	padding: $form-padding;
	// }
}

// * Form - Table

/*
<div class="cui-form">
	<div class="cui-vertical-layout-center">
		<div class="cui-form-table">
			<div class="cui-form-tr">
				<div class="cui-form-td cui-form-key"></div>
				<div class="cui-form-td cui-form-value"></div>
			</div>
		</div>
	</div>
</div>
*/

.cui-form-table {
	--form-key-width: #{$form-key-width};

	.cui-form-block + & {
		margin-top: $spacer-sm;
	}
}

.cui-form-tr,
.cui-form-tr-header {
	display: flex;
	min-height: $form-row-height; // todo: needed?
	margin-bottom: $form-cell-gap;

	@include media-breakpoint-down(sm) {
		display: block;
	}
}

.cui-form-key {
	flex: 0 0 auto;
	width: $form-key-width; // fallback
	width: var(--form-key-width);
	min-width: $form-key-width; // fallback
	min-width: var(--form-key-width);
	max-width: none;
	padding-right: $form-cell-gap;

	label,
	.cui-label {
		display: inline-block;
		padding-top: 0.41em;
		white-space: normal;
		min-width: $form-key-min-width;
		max-width: 100%;
		word-wrap: break-word;
		// todo:
		color: $form-label-color;
		font-size: $form-label-font-size;
		font-weight: $form-label-font-weight;
		line-height: $line-height-sm;
	}
}

.cui-form-value {
	flex: 1 1 auto;
	min-width: 0;

	input {
		min-width: 0;
	}

	// label,
	// .cui-label {
	// 	padding-top: 0.28em; // see .cui-form-key label, needs to be in line, depends on the font-size
	// }

	> .cui-options {
		.cui-options-center {
			min-height: 0;
		}
	}

	> .cui-data-field {
		min-width: 0;
	}
}

.cui-maximize-horizontal > .cui-vertical-layout-center {
	> .cui-form-table {
		> tr {
			> .cui-form-td.cui-form-value {
				flex: 1 1 auto;
				width: 200px;
			}
		}
	}

	> .cui-form-table-vertical {
		> .cui-tr {
			> .cui-form-value {
				flex-shrink: 1;
				min-width: 0;
			}
		}
	}
}

// * Form - Block

/*
<div class="cui-form">
	<div class="cui-vertical-layout-center">
		<div class="cui-form-table">
			<div class="cui-form-tr">
				<div class="cui-block cui-form-block">
					<div class="cui-block-header"></div>
					<div class="cui-block-content"></div>
				</div>
			</div>
		</div>
	</div>
</div>
*/

.cui-form-block {
	&.cui-maximize-vertical,
	&.cui-maximize {
		&,
		> .cui-block-content {
			flex: 1;
			display: flex;
			flex-direction: column;
		}
	}

	.cui-form-table + & {
		margin-top: $form-cell-gap;
	}
}


// * Form - Container

/*
<div class="cui-form">
	<div class="cui-vertical-layout-center">
		<div class="cui-form-container">
			<div class="cui-form-row"></div>
		</div>
	</div>
</div>
*/

.cui-form-container {
	flex: 1 0 auto;
	display: flex;
	flex-direction: column;
	min-height: 0;

	&.cui-form--horizontal {
		flex-direction: row;
	}
}

.cui-form-row {
	flex: 1 0 auto;
	display: flex;
	flex-direction: column;
	min-height: 0;

	// :not(.cui-form-field-type--checkbox) use case see: .ez5-download-manager-confirmation-dialog
	&:not(:last-child):not(.cui-form-field-type--checkbox) {
		margin-bottom: $form-cell-gap;
	}

	.cui-form-container.cui-form--horizontal > & {
		flex: 0 0 auto;
		min-width: 0;
		margin-bottom: 0;

		&:not(:last-child) {
			margin-right: $form-cell-gap;
		}

		&.cui-maximize-horizontal {
			flex-grow: 1;
		}
	}
}

// Radio button + Input field (like an option "other" with free text)
.cui-form-field-type--checkbox {
	+ .cui-form-row {
		.cui-form-container.cui-form--horizontal {
			> .cui-form-row:first-child {
				margin-right: 0;
			}
		}

		.cui-form.cui-data-field {
			margin-top: $spacer-sm;
		}
	}
}

// * Form Grid
// former use-case: SessionTrayApp, in the header click button "root" then "Einstellungen"
// in fylr we do not want this to be displayed as a grid

// .cui-form--grid {
// 	@include form-as-grid();
// }

// * Form hints (validation, input types etc.)

.cui-hint,
.cui-form-hint,
.cui-input-invalid-hint,
.cui-input-valid-hint,
.cui-input-empty-hint {
	@include form-hint();

	.cui-label {
		padding-top: 0;
	}
}

.cui-input-invalid-hint {
	color: theme-color('danger');
}

// todo: test in the app
.cui-form-hint {
	// max-width: $data-field-width; // todo: do we really want to restrict the width, why?

	.cui-checkbox + &,
	.cui-data-field.cui-maximize-horizontal + & {
		max-width: 100%;
	}

	.cui-data-form + & {
		margin-top: $spacer-sm;
	}

	.cui-label-icon:not(:empty) + .cui-label-content:not(:empty) {
		padding-left: $spacer-sm;
	}

	.fa {
		font-size: 12px;
	}

	// IE layout fix: (layer form hint)
	.cui-label-multiline {
		flex-grow: 1;
		display: flex;
		align-items: flex-start;

		.cui-label-content {
			flex-basis: 0%;
		}
	}
}

// Button that opens a form in a popup or in a modal
.cui-form-popover,
.cui-form-modal {
	&.cui-vertical-layout {
		overflow: visible; // don't cut off outline
	}

	.cui-vertical-layout-center {
		display: block;

		+ .cui-vertical-layout-bottom {
			margin: $spacer-xs 0 0;

			&:empty {
				display: none;
			}

			.cui-empty-label {
				padding: 0;
			}
		}
	}
}

